--- a/index.html
+++ b/index.html
@@ -165,8 +165,14 @@
 	</div>
 </div>
 
-<script src="paper.js" type="text/javascript"></script>
-<script src="site.js" type="text/javascript"></script>
+<script src="paper.js"      type="text/javascript"></script>
+<script type="text/javascript">
+	paper.install(window);
+</script>
+<script src="data.js"       type="text/javascript"></script>
+<script src="ui.js"         type="text/javascript"></script>
+<script src="controller.js" type="text/javascript"></script>
+<script src="site.js"       type="text/javascript"></script>
 </body>
 
 </html>
